--- a/Gate.html
+++ b/Gate.html
@@ -223,12 +223,12 @@ new Q.Gate(<span class="comment">//  Fredkin</span>
 				</li>
 			</ul>
 			<hr>
-			<h3 id="Class_properties">Class properties</h3>
+			<h3 id="Static_properties">Static properties</h3>
 			<p>
 				Description TK
 			</p>
 			<hr>
-			<h3 id="Instance_properties">Instance properties</h3>
+			<h3 id="Prototype_properties">Prototype properties</h3>
 			<p>
 				Description TK
 			</p>
