--- a/Qubit.html
+++ b/Qubit.html
@@ -127,18 +127,43 @@
 				<code>Q.Qubit</code>
 				extends the <code>Q.<a href="Matrix.html">Matrix</a></code> class
 				and therefore inherits its class and instance methods.
-				A new qubit may be created like so:
+				When a new qubit is created it internally invokes the
+				<code>Q.<a href="Matrix.html">Matrix</a></code> constructor,
+				such that <code>new Q.Qubit( <span class="symbol">a</span>, <span class="symbol">b</span> )</code>
+				is similar to
+				<code>new Q.<a href="Matrix.html">Matrix</a>([ <span class="symbol">a</span> ],[ <span class="symbol">b</span> ])</code>.
+				If the two supplied values do not satisfy the assertion that
+				|<span class="symbol">a</span>|<sup>2</sup> + |<span class="symbol">b</span>|<sup>2</sup> = 1 
+				then an error is thrown.
 			</p>
 <pre><code>
 var a = new Q.Qubit( 0, 1 )
 </code></pre>
-			<p>
-				When a new qubit is created it internally invokes the
-				<code>Q.<a href="Matrix.html">Matrix</a></code> constructor,
-				such that <code>new Q.Qubit( a, b )</code>
-				is similar to
-				<code>new Q.<a href="Matrix.html">Matrix</a>([ a ],[ b ])</code>.
-			</p>
+			<ul class="properties">
+				<li>
+					<dt id=".this.controlBit"><a href="#.this.controlBit">controlBit</a></dt>
+					<dd>Description TK.</dd>
+				</li>
+				<li>
+					<dt id=".this.targetBit"><a href="#.this.targetBit">targetBit</a></dt>
+					<dd>Description TK.</dd>
+				</li>
+				<li>
+					<dt id=".this.dirac"><a href="#.this.dirac">dirac</a></dt>
+					<dd>Description TK.</dd>
+				</li>
+				<li>
+					<dt id=".this.name"><a href="#.this.name">name</a></dt>
+					<dd>Description TK.</dd>
+				</li>
+				<li>
+					<dt id=".this.index"><a href="#.this.index">index</a></dt>
+					<dd>
+						An auto-incrementing identification number assigned to the instance,
+						used for minding the total number of instances created.
+					</dd>
+				</li>
+			</ul>
 			<hr>
 			<h3 id="Constants">Constants</h3>
 			<p>
@@ -181,7 +206,7 @@ var a = new Q.Qubit( 0, 1 )
 				</li>
 			</ul>
 			<hr>
-			<h3 id="Class_properties">Class properties</h3>
+			<h3 id="Static_properties">Static properties</h3>
 			<ul class="properties">
 				<li>
 					<dt id=".index"><a href="#.index">index</a></dt>
@@ -228,7 +253,7 @@ var a = new Q.Qubit( 0, 1 )
 				-->
 			</ul>
 			<hr>
-			<h3 id="Instance_properties">Instance properties</h3>
+			<h3 id="Prototype_properties">Prototype properties</h3>
 			<h4>Non-destructive methods</h4>
 			<ul class="properties">
 				<li>
