‘prototype’ not ‘protoPtype’!

--- a/Matrix.html
+++ b/Matrix.html
@@ -363,111 +363,111 @@ var a = new Q.Matrix(
 			<h3 id="Prototype_properties">Prototype properties</h3>
 			<ul class="properties">
 				<li>
-					<dt id=".protoptype.isValidRow"><a href="#.protoptype.isValidRow">isValidRow</a></dt>
+					<dt id=".prototype.isValidRow"><a href="#.prototype.isValidRow">isValidRow</a></dt>
 					<dd> Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.isValidColumn"><a href="#.protoptype.isValidColumn">isValidColumn</a></dt>
+					<dt id=".prototype.isValidColumn"><a href="#.prototype.isValidColumn">isValidColumn</a></dt>
 					<dd> Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.isValidAddress"><a href="#.protoptype.isValidAddress">isValidAddress</a></dt>
+					<dt id=".prototype.isValidAddress"><a href="#.prototype.isValidAddress">isValidAddress</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.getWidth"><a href="#.protoptype.getWidth">getWidth</a></dt>
+					<dt id=".prototype.getWidth"><a href="#.prototype.getWidth">getWidth</a></dt>
 					<dd> Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.getHeight"><a href="#.protoptype.getHeight">getHeight</a></dt>
+					<dt id=".prototype.getHeight"><a href="#.prototype.getHeight">getHeight</a></dt>
 					<dd> Description TK</dd>
 				</li>
 			</ul>
 			<h4>Data exports methods (non-destructive by nature)</h4>
 			<ul class="properties">
 				<li>
-					<dt id=".protoptype.read"><a href="#.protoptype.read">read</a></dt>
+					<dt id=".prototype.read"><a href="#.prototype.read">read</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.clone"><a href="#.protoptype.clone">clone</a></dt>
+					<dt id=".prototype.clone"><a href="#.prototype.clone">clone</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.toArray"><a href="#.protoptype.toArray">toArray</a></dt>
+					<dt id=".prototype.toArray"><a href="#.prototype.toArray">toArray</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.toXsv"><a href="#.protoptype.toXsv">toXsv</a></dt>
+					<dt id=".prototype.toXsv"><a href="#.prototype.toXsv">toXsv</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.toCsv"><a href="#.protoptype.toCsv">toCsv</a></dt>
+					<dt id=".prototype.toCsv"><a href="#.prototype.toCsv">toCsv</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.toTsv"><a href="#.protoptype.toTsv">toTsv</a></dt>
+					<dt id=".prototype.toTsv"><a href="#.prototype.toTsv">toTsv</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.toHtml"><a href="#.protoptype.toHtml">toHtml</a></dt>
+					<dt id=".prototype.toHtml"><a href="#.prototype.toHtml">toHtml</a></dt>
 					<dd>Description TK</dd>
 				</li>
 			</ul>
 			<h4>Data import methods (destructive)</h4>
 			<ul class="properties">
 				<li>
-					<dt id=".protoptype.write$"><a href="#.protoptype.write$">write$</a></dt>
+					<dt id=".prototype.write$"><a href="#.prototype.write$">write$</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.copy$"><a href="#.protoptype.copy$">copy$</a></dt>
+					<dt id=".prototype.copy$"><a href="#.prototype.copy$">copy$</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.fromArray$"><a href="#.protoptype.fromArray$">fromArray$</a></dt>
+					<dt id=".prototype.fromArray$"><a href="#.prototype.fromArray$">fromArray$</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.fromCsv$"><a href="#.protoptype.fromCsv$">fromCsv$</a></dt>
+					<dt id=".prototype.fromCsv$"><a href="#.prototype.fromCsv$">fromCsv$</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.fromTsv$"><a href="#.protoptype.fromTsv$">fromTsv$</a></dt>
+					<dt id=".prototype.fromTsv$"><a href="#.prototype.fromTsv$">fromTsv$</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.fromHtml$"><a href="#.protoptype.fromHtml$">fromHtml$</a></dt>
+					<dt id=".prototype.fromHtml$"><a href="#.prototype.fromHtml$">fromHtml$</a></dt>
 					<dd>Description TK</dd>
 				</li>
 			</ul>
 			<h4>Maths operations (non-destructive)</h4>
 			<ul class="properties">
 				<li>
-					<dt id=".protoptype.add"><a href="#.protoptype.add">add</a></dt>
+					<dt id=".prototype.add"><a href="#.prototype.add">add</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.multiplyScalar"><a href="#.protoptype.multiplyScalar">multiplyScalar</a></dt>
+					<dt id=".prototype.multiplyScalar"><a href="#.prototype.multiplyScalar">multiplyScalar</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.multiply"><a href="#.protoptype.multiply">multiply</a></dt>
+					<dt id=".prototype.multiply"><a href="#.prototype.multiply">multiply</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.multiplyTensor"><a href="#.protoptype.multiplyTensor">multiplyTensor</a></dt>
+					<dt id=".prototype.multiplyTensor"><a href="#.prototype.multiplyTensor">multiplyTensor</a></dt>
 					<dd>Description TK</dd>
 				</li>
 			</ul>
 			<h4>Maths operations (destructive)</h4>
 			<ul class="properties">
 				<li>
-					<dt id=".protoptype.add$"><a href="#.protoptype.add$">add$</a></dt>
+					<dt id=".prototype.add$"><a href="#.prototype.add$">add$</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.multiplyScalar$"><a href="#.protoptype.multiplyScalar$">multiplyScalar$</a></dt>
+					<dt id=".prototype.multiplyScalar$"><a href="#.prototype.multiplyScalar$">multiplyScalar$</a></dt>
 					<dd>Description TK</dd>
 				</li>
 			</ul>
