--- a/Qubit.html
+++ b/Qubit.html
@@ -257,22 +257,22 @@ var a = new Q.Qubit( 0, 1 )
 			<h4>Non-destructive methods</h4>
 			<ul class="properties">
 				<li>
-					<dt id=".protoptype.isEqualTo"><a href="#.protoptype.isEqualTo">isEqualTo</a></dt>
+					<dt id=".prototype.isEqualTo"><a href="#.prototype.isEqualTo">isEqualTo</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.collapse"><a href="#.protoptype.collapse">collapse</a></dt>
+					<dt id=".prototype.collapse"><a href="#.prototype.collapse">collapse</a></dt>
 					<dd>Description TK</dd>
 				</li>
 			</ul>
 			<h4>Destructive methods</h4>
 			<ul class="properties">
 				<li>
-					<dt id=".protoptype.copy$"><a href="#.protoptype.copy$">copy$</a></dt>
+					<dt id=".prototype.copy$"><a href="#.prototype.copy$">copy$</a></dt>
 					<dd>Description TK</dd>
 				</li>
 				<li>
-					<dt id=".protoptype.collapse$"><a href="#.protoptype.collapse$">collapse$</a></dt>
+					<dt id=".prototype.collapse$"><a href="#.prototype.collapse$">collapse$</a></dt>
 					<dd>Description TK</dd>
 				</li>
 			</ul>
