Gate doc placeholders.

--- a/Gate.html
+++ b/Gate.html
@@ -59,6 +59,19 @@
 			<p>
 				Description TK
 			</p>
+			<ul class="properties">
+				<li>
+					<dt id=".this.label"><a href="#.this.label">label</a></dt>
+					<dd>Description TK.</dd>
+				</li>
+				<li>
+					<dt id=".this.index"><a href="#.this.index">index</a></dt>
+					<dd>
+						An auto-incrementing identification number assigned to the instance,
+						used for minding the total number of instances created.
+					</dd>
+				</li>
+			</ul>
 			<hr>
 			<h3 id="Constants">Constants</h3>
 			<p>
@@ -224,14 +237,47 @@ new Q.Gate(<span class="comment">//  Fredkin</span>
 			</ul>
 			<hr>
 			<h3 id="Static_properties">Static properties</h3>
-			<p>
-				Description TK
-			</p>
+			<ul class="properties">
+				<li>
+					<dt id=".index"><a href="#.index">index</a></dt>
+					<dd>Description TK</dd>
+				</li>
+				<li>
+					<dt id=".help"><a href="#.help">help</a></dt>
+					<dd>Description TK</dd>
+				</li>
+				<li>
+					<dt id=".constants"><a href="#.constants">constants</a></dt>
+					<dd>
+						While <code>Q.Qubit</code> <a href="#Constants">constants</a>
+						are appended directly to the <code>Q.Qubit</code> object,
+						they are also appended to a <code>Q.Qubit.constants</code> object
+						to make looking up constants in the JavaScript console trivial,
+						and to make iterating across all constants convenient via
+						functions like 
+						<code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/entries" target="_blank">Object.entries</a></code>,
+						<code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/keys" target="_blank">Object.keys</a></code>,
+						<code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/values" target="_blank">Object.values</a></code>,
+						and so on.
+					</dd>
+				</li>
+				<li>
+					<dt id=".createConstant"><a href="#.createConstant">createConstant</a></dt>
+					<dd>Description TK</dd>
+				</li>
+				<li>
+					<dt id=".createConstants"><a href="#.createConstants">createConstants</a></dt>
+					<dd>Description TK</dd>
+				</li>
+			</ul>
 			<hr>
 			<h3 id="Prototype_properties">Prototype properties</h3>
-			<p>
-				Description TK
-			</p>
+			<ul class="properties">
+				<li>
+					<dt id=".prototype.applyTo"><a href="#.prototype.applyTo">applyTo</a></dt>
+					<dd>Description TK</dd>
+				</li>
+			</ul>
 			<hr>
 			Source:
 			<a href="https://github.com/stewdio/q.js/blob/master/Q/Gate.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/Q/Gate.js</a>
