--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
 			</p>
 			<pre><code>
 Q.<a href="Gate.html">Gate</a>.<a href="Gate.html#.HADAMARD">HADAMARD</a>
-	.<a href="Gate.html#.applyTo">applyTo</a>( Q.<a href="Qubit.html">Qubit</a>.<a href="Qubit.html#.HORIZONTAL">HORIZONTAL</a> )
+	.<a href="Gate.html#.prototype.applyTo">applyTo</a>( Q.<a href="Qubit.html">Qubit</a>.<a href="Qubit.html#.HORIZONTAL">HORIZONTAL</a> )
 	.<a href="Qubit.html#.prototype.collapse">collapse</a>()
 	.<a href="Qubit.html#.this.targetBit">targetBit</a>
-	.<a href="ComplexNumber.html#.toString">toString</a>()
+	.<a href="ComplexNumber.html#.prototype.toString">toString</a>()
 </pre></code>
 			<p>
 				Did you try it?
