Fixed canonical LINK tags.

--- a/Matrix.html
+++ b/Matrix.html
@@ -35,7 +35,7 @@
 		<meta property="og:image"         content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
 		<meta property="og:url"           content="http://stewartsmith.io">
 		
-		<link rel="canonical"             href="https://stewdio.github.io/q.js/">
+		<link rel="canonical"             href="https://stewdio.github.io/q.js/Matrix.html">
 		<link rel="icon" type="image/png" href="Assets/q-favicon-064.png">
 		<link rel="apple-touch-icon"      href="Assets/q-favicon-144.png">
 		<link rel="stylesheet" type="text/css" href="Assets/style.css">
